syntax = "proto3";

package inventory.v1;

import "google/protobuf/timestamp.proto";

option go_package = "mygo/shared/pkg/proto/inventory/v1;inventory_v1";

enum Category {
    CATEGORY_UNSPECIFIED = 0;
    CATEGORY_ENGINE = 1;
    CATEGORY_FUEL = 2;
    CATEGORY_PORTHOLE = 3;
    CATEGORY_WING = 4;
}

message Dimensions {
    int64 id = 1;
    double length = 2;
    double width = 3;
    double height = 4;
    double weight = 5;
}

message Manufacturer {
    int64 id = 1;
    string name = 2;
    string country = 3;
    string website = 4;
}

service InventoryService {
    rpc GetPart(GetPartRequest) returns (GetPartResponse);

    rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
}

message Part {
    int64 id = 1;
    string uuid = 2;
    string name = 3;
    string description = 4;
    double price = 5;
    int64 stock_quantity = 6;
    Category category = 7;
    Dimensions dimensions = 8;
    Manufacturer manufacturer = 9;
    repeated string tags = 10;
    map<string, Metadata> metadata = 11;
    google.protobuf.Timestamp created_at = 12;
    google.protobuf.Timestamp update_at = 13;
}

message Metadata {
  int64 id = 1;
  oneof value {
    string string_value = 2;
    int64 int64_value = 3;
    double double_value = 4;
    bool bool_value = 5;
  }
}

message GetPartRequest {
    int64 id = 1;
    string uuid = 2;
}

message GetPartResponse {
    int64 id = 1;
    Part part = 2;
}

message ListPartsRequest {
    int64 id = 1;
    ListPartsFilter filter = 2;
}

message ListPartsResponse {
    int64 id = 1;
    repeated Part parts = 2;
}

message ListPartsFilter {
    int64 id = 1;
    repeated string uuids = 2;
    repeated string names = 3;
    repeated Category categorys = 4;
    repeated string manufacturer_countries = 5;
    repeated string tags = 6;
}